[gd_scene load_steps=14 format=2]

[ext_resource path="res://parallax background/plx-1.png" type="Texture" id=1]
[ext_resource path="res://parallax background/plx-4.png" type="Texture" id=2]
[ext_resource path="res://parallax background/plx-2.png" type="Texture" id=3]
[ext_resource path="res://parallax background/plx-3.png" type="Texture" id=4]
[ext_resource path="res://parallax background/plx-5.png" type="Texture" id=5]
[ext_resource path="res://Platform.tscn" type="PackedScene" id=6]
[ext_resource path="res://SpawnTimer.gd" type="Script" id=7]
[ext_resource path="res://World.gd" type="Script" id=8]
[ext_resource path="res://Cactus01.tscn" type="PackedScene" id=9]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=10]
[ext_resource path="res://particles/Leaf.tscn" type="PackedScene" id=11]
[ext_resource path="res://UI/Score.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 197, 10 )

[node name="World" type="ParallaxBackground"]
script = ExtResource( 8 )

[node name="BackGround" type="ParallaxLayer" parent="."]
motion_scale = Vector2( 0.25, 1 )
motion_mirroring = Vector2( 380, 0 )

[node name="Plx1" type="Sprite" parent="BackGround"]
texture = ExtResource( 1 )
centered = false

[node name="Plx2" type="Sprite" parent="BackGround"]
texture = ExtResource( 3 )
centered = false

[node name="Plx3" type="Sprite" parent="BackGround"]
texture = ExtResource( 4 )
centered = false

[node name="Plx4" type="Sprite" parent="BackGround"]
texture = ExtResource( 2 )
centered = false

[node name="Plx5" type="Sprite" parent="BackGround"]
texture = ExtResource( 5 )
centered = false

[node name="Cactus" parent="." instance=ExtResource( 9 )]
position = Vector2( 400, 183 )

[node name="ForeGround" type="ParallaxLayer" parent="."]
motion_mirroring = Vector2( 384, 0 )

[node name="Platform" parent="ForeGround" instance=ExtResource( 6 )]
show_collision = true
tile_data = PoolIntArray( 393216, 1, 0, 393217, 1, 0, 393218, 1, 0, 393219, 1, 0, 393220, 1, 0, 393221, 1, 0, 393222, 1, 0, 393223, 1, 0, 393224, 1, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 197, 205 )
shape = SubResource( 1 )

[node name="SpawnTimer" type="Timer" parent="."]
script = ExtResource( 7 )

[node name="Player" parent="." instance=ExtResource( 10 )]
position = Vector2( 45, 185 )

[node name="Leaf" parent="." instance=ExtResource( 11 )]
position = Vector2( 402, -23 )
z_index = 50

[node name="Score" parent="." instance=ExtResource( 12 )]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
